# BidirectionalGaitNet

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DIRECTORY_REORGANIZATION.md  FINAL_ORGANIZATION.md  INSTALL.md  LOG_CONTROL.md  README.md  README_REFACTORING.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETION_GUIDE.md  REFACTORING_SUMMARY.md  REORGANIZATION_SUCCESS.md  ROLLOUT_MIGRATION_COMPLETE.md  SURGERY_SCRIPT_IMPLEMENTATION.md  SURGERY_TOOL_USAGE.md  debug_test.py  export_muscle_yaml_test.yaml  export_skeleton_yaml.yaml  git_sync.sh  install.sh  muscle_exported_test.yaml  pixi.toml  pyproject.toml  render.yaml  requirements.txt  setup.py  skeleton_exported.yaml  test_gymnasium.py  test_pyrollout_ray.py  test_python_uri_resolver.py  test_uri_resolver.cpp  test_yaml_skeleton.yaml  tmp1  tmp2
claudedocs/: GIL_Issue_Analysis.md  MABA_SPD_Implementation_Plan.md  cluster_performance_fix.md  episode_logging_fix.md  episode_logging_implementation.md  info_logging_every_step_fix.md  libtorch_threading_fix.md  logical_equivalence_verification.md  metabolic_energy_implementation.md  metabolic_ui_implementation.md  muscle_network_dual_device_architecture.md  muscle_param_refactoring.md  parallel_initialization_optimization.md  parallel_weight_synchronization.md  ray_dependency_removal.md  rollout_filters_guide.md  single_motion_refactoring_guide.md  skeleton_export_implementation.md  skeleton_metadata_preservation.md  skeleton_transform_investigation.md  threading_architecture_fix.md  threading_best_practices.md  threading_performance_fix.md
data/: .gitignore  A.xml  A2.xml  A2_knee_term.xml  A2_knee_term.yaml  A2_meta05.yaml  A2_sep.yaml  A2_sep_scol.yaml  A2_skel.yaml  A_fskel.xml  A_ham4.yaml  A_knee.xml  A_knee.yaml  A_knee_mult.xml  A_knee_mult_meta_mult.xml  A_knee_sep.yaml  A_knee_term_max.yaml  A_knee_term_meta_mult.xml  A_s05.xml  (+67 more)
libs/: CMakeLists.txt  README.md
ppo/: BatchEnv.cpp  BatchEnv.h  BatchRolloutEnv.cpp  BatchRolloutEnv.h  CMakeLists.txt  GymEnvManager.cpp  NUMAThreadPool.cpp  NUMAThreadPool.h  PolicyNet.cpp  PolicyNet.h  README.md  ThreadPool.h  TrajectoryBuffer.cpp  TrajectoryBuffer.h  __init__.py  batch_env_wrapper.py  batchenv_wrapper.py  benchmark_init_time.py  benchmark_muscle.py  benchmark_num_envs.py  benchmark_rollout.py  benchmark_weight_sync_time.py  checkpoint.py  discriminator.py  env_wrapper.py  learn.py  model.py  muscle_learner.py  muscle_nn.py  ppo_hierarchical.py  ppo_rollout_learner.py  test_batchenv.py  test_gymenv.py  torch_config.py  utils.py
rm/: CMakeLists.txt  __init__.py
rm/include/rm/: backend.hpp  error.hpp  global.hpp  handle.hpp  manager.hpp  pid_path.hpp  rm.hpp  uri.hpp
rm/include/rm/backends/: ftp.hpp  local.hpp  pid.hpp
rm/python/: CMakeLists.txt  bindings.cpp  prefetch.py
rm/src/: global.cpp  handle.cpp  manager.cpp  pid_path.cpp  uri.cpp
rm/src/backends/: ftp.cpp  local.cpp  pid.cpp
rm/tests/: test_pyrm.py  test_rm.cpp
rollouts/: CMakeLists.txt  NPZRolloutRecord.h  PyRolloutEnvironment.cpp  PyRolloutRecord.cpp  PyRolloutRecord.h  RolloutEnvironment.cpp  RolloutEnvironment.h  RolloutRecord.cpp  RolloutRecord.h  __init__.py  sample_rollout.py
rollouts/common/: CMakeLists.txt  PyRolloutRecord.cpp  RolloutRecord.cpp  RolloutRecord.h
rollouts/ray/: CMakeLists.txt  PyRolloutEnvironment.cpp  RolloutEnvironment.cpp  RolloutEnvironment.h
rollouts/sample/: CMakeLists.txt  PySampleRolloutEnv.cpp  RolloutSampleEnv.cpp  RolloutSampleEnv.h  __init__.py
sim/: BVH_Parser.cpp  BVH_Parser.h  C3D.cpp  C3D.h  C3DMotion.cpp  C3DMotion.h  CBufferData.h  CMakeLists.txt  Character.cpp  Character.h  Controller.cpp  Controller.h  DARTHelper.cpp  DARTHelper.h  DiscriminatorNN.cpp  DiscriminatorNN.h  Environment.cpp  Environment.h  GaitPhase.cpp  GaitPhase.h  HDF.cpp  HDF.h  HDFRollout.cpp  HDFRollout.h  Log.cpp  Log.h  Motion.h  Muscle.cpp  Muscle.h  MuscleNN.cpp  MuscleNN.h  NPZ.cpp  NPZ.h  NoiseInjector.cpp  NoiseInjector.h  UriResolver.cpp  UriResolver.h  export.h
surgery/: CMakeLists.txt  PhysicalExam.cpp  PhysicalExam.cpp.backup  PhysicalExam.h  SurgeryExecutor.cpp  SurgeryExecutor.cpp.backup  SurgeryExecutor.h  SurgeryOperation.cpp  SurgeryOperation.h  SurgeryPanel.cpp  SurgeryPanel.h  SurgeryScript.cpp  contracture_cli_main.cpp  physical_exam_main.cpp  surgery_cli_main.cpp  surgery_main.cpp  test_transform.cpp  waypoint_cli_main.cpp
surgery/optimizer/: BoneOptimizer.cpp  BoneOptimizer.h  CMakeLists.txt  ContractureOptimizer.cpp  ContractureOptimizer.h  WaypointOptimizer.cpp  WaypointOptimizer.h
tools/: CMakeLists.txt  c3d_calibration_cli_main.cpp  c3d_inspect.cpp  c3d_merge.cpp  convert_ckpt_to_torchscript.py  extract_cycle.cpp  hdf_dof_remapper.cpp  headless_ckpt_player.cpp  skeleton_global_export.cpp  yaml_diff.cpp
viewer/: C3DProcessorApp.cpp  C3DProcessorApp.h  C3D_Reader.cpp  C3D_Reader.h  CMakeLists.txt  CeresOptimizer.cpp  CeresOptimizer.h  GLFWApp.cpp  GLFWApp.cpp.refactor_backup  GLFWApp.h  GLfunctions.cpp  GLfunctions.h  IncrementalLeastSquares.h  LOG_CATEGORIES.md  LOG_USAGE.md  Log.h  MarkerEditorApp.cpp  MarkerEditorApp.h  MotionEditorApp.cpp  MotionEditorApp.h  MusclePersonalizerApp.cpp  MusclePersonalizerApp.h  PhysicalExam.cpp  PhysicalExam.h  PlaybackUtils.h  PlotUtils.cpp  PlotUtils.h  RenderCharacter.cpp  RenderCharacter.h  RenderCkpt.cpp  RenderCkpt.h  RenderEnvironment.cpp  RenderEnvironment.h  ShapeRenderer.cpp  ShapeRenderer.h  SurgeryOperation.cpp  SurgeryOperation.h  SurgeryScript.h  c3d_processor_main.cpp  glfw_app_main.cpp  (+10 more)
viewer/common/: GLfunctions.cpp  GLfunctions.h  PIDFileFilter.h  PIDImGui.cpp  PIDImGui.h  PIDNavigator.cpp  PIDNavigator.h  PlotUtils.cpp  ViewerAppBase.cpp  ViewerAppBase.h  imgui_common.cpp  imgui_common.h  timeline.cpp  timeline.h
viewer/motion/: C3DMotionProcessor.cpp  C3DMotionProcessor.h  HDFMotionProcessor.cpp  HDFMotionProcessor.h  IMotionProcessor.h  MotionProcessor.cpp  MotionProcessor.h  MotionProcessorFactory.cpp  MotionProcessorFactory.h  PlaybackContext.h  PlaybackController.cpp  PlaybackController.h  PlaybackUtils.h
(+685 files in other folders)
