[project]
name = "bidirectional-gaitnet"
version = "0.1.0"
description = "Bidirectional GaitNet training system with unified configuration"
authors = [
    {name = "Geon", email = "geon@example.com"}
]
dependencies = [
]
requires-python = ">=3.8"

[project.scripts]
# Unified training interface
train = "python.train:main"

# Quick training commands
train-fgn = "python.scripts:train_fgn"
train-bgn = "python.scripts:train_bgn"
train-pipeline = "python.scripts:train_pipeline"

# C++ binary wrappers
viewer = "python.scripts:viewer"
physical_exam = "python.scripts:physical_exam"
surgery = "python.scripts:surgery_tool"
extract-cycle = "python.scripts:extract_cycle"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
