[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bidirectional-gait-net"
version = "0.1.0"
description = "Bidirectional GaitNet with PPO and hierarchical muscle control"
authors = [{name = "BidirectionalGaitNet"}]
requires-python = ">=3.8"
dependencies = [
    "tyro>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
# Local package development
dev-dependencies = []

[tool.uv.sources]
ppo = { path = "ppo", editable = true }
